# TransparentAI

./: .gitignore  .gitmodules  Justfile  README.md  compose.yaml  docker-compose.yaml  octoml.yaml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pr.yaml
00-starting-local/: closedai.py
api/: .flake8  Dockerfile  config.yaml  pyproject.toml
api/client/: transparent.py
api/scripts/: request.py
api/server/: config.py  main.py  model.py  run.sh  test.py
api/server/utils/: image.py  triton.py
chat/: .dockerignore  Dockerfile  README.md  index.html  index.js  package-lock.json  package.json
deploy/: dashboard.json
deploy/helm/: values.yaml
deploy/helm/configmap/: config.yaml
deploy/helm/templates/: configmap.yaml  deployment.yaml  extra_models_deployment.yaml  ingress.yaml  pmp.yaml  service.yaml
deploy/operators/prometheus/: bundle.yaml
frontend/: .dockerignore  Dockerfile  pyproject.toml  readme.md  run.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  extra_models_service.yaml  service.yaml  servicemonitor.yaml
imagefrontend/: .dockerignore  Dockerfile  notes  requirements.txt  run.py
local_config/: config.yaml
models/onnx_models/: octoml.yaml
models/tensorflow_models/: octoml.yaml
scripts/: inference_cannon.yaml  tag_accelerated_models.sh  tag_express.sh  upload_docker-pull-secret.sh
tai-api/: .dockerignore  Dockerfile  client.py  engine.py  main.py  task.py
tutorials/: deploy_to_cloud.md  developer.md  quickstart-compose.yaml  quickstart.md
(+5 files in other folders)
